# convoy-graphql

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
.github/workflows/: ci.yml
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros/src/graphql_schema/: autogen.rs  codegen.rs  mod.rs  parse.rs  validation.rs
examples/: run.sh  schema_module.rs
src/: context.rs  error.rs  lib.rs  loader.rs
src/server/: axum.rs  mod.rs  service.rs
tests/: e2e_server.rs
