[package]
name = "convoy-graphql-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for convoy-graphql resolver registration"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
